[tool.poetry]
name = "HeatFun"
version = "0.1.0"
description = "Heat Equation Solver"
authors = ["MrP01 <peter@waldert.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.24.1"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
invoke = "^1.7.3"

[tool.nitpick]
style = [
  "github://MrP01/lint-me-now/nitpick-base-style.toml",
  "github://MrP01/lint-me-now/nitpick-latex-style.toml",
  "github://MrP01/lint-me-now/nitpick-c-cpp-style.toml",
  "github://MrP01/lint-me-now/nitpick-python-style.toml"
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = [".git", "**/__pycache__", "build", "stuff", ".cache"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
